--- a/static/sass/custom.scss
+++ b/static/sass/custom.scss
@@ -11,6 +11,12 @@
 
 $lightest: #ccc;
 
+.row {
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .hc-graphic-wrapper {
     margin: 0 auto 8rem;
     max-width: 1200px;
@@ -70,13 +76,19 @@ $lightest: #ccc;
     width: calc(100% / 3);
     height: 100%;
     overflow: auto;
+    margin-bottom: 6rem;
 
     @media (max-width: 768px) {
         width: 100%;
         padding: 3rem;
+        margin-bottom: 0;
 
         &:not(:last-of-type) {
             border-bottom: 0.5px solid $lightest;
+        }
+
+        &:last-of-type {
+            margin-bottom: 6rem;
         }
     }
 }
@@ -149,13 +161,13 @@ $lightest: #ccc;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: yellow;
+    background-color: #ccc;
+    // background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/silhouette.jpg');
 }
 
 #hc-tooltip {
     height: auto;
-    width: 30%;
-    min-width: 200px;
+    width: 250px;
     position: absolute;
     background: white;
     z-index: 1000;
@@ -163,39 +175,71 @@ $lightest: #ccc;
     webkit-box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.32);
     -moz-box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.32);
     box-shadow: 0px 0px 4px 1px rgba(0,0,0,0.32);
+
+    @media (max-width: 768px) {
+        width: 200px;
+    }
 }
 
 .hc-headshot {
-    height: 100px;
-    width: 100px;
-    background: $lightest;
-    margin: 2rem;
-    display: inline-block;
-    float: left;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    width: 100%;
+    display: block;
+    margin: 2rem auto;
+    float: none;
+    margin: 0;
+    height: 215px;
+    background-color: #ccc;
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/silhouette.jpg');
 
     @media (max-width: 768px) {
-        height: 50px;
-        width: 50px;
-        display: block;
-        margin: 2rem auto;
-        float: none;
+        height: 170px;
     }
 }
 
 .hc-tooltip-head {
-    margin-top: 2rem;
+    margin: 2rem 2rem 1rem;
+    font-weight: bold;
 
     @media (max-width: 768px) {
         display: block;
         float: none;
-        margin: 2rem;
     }
 }
 
 .hc-tooltip-details {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     margin: 0 2rem 2rem;
+    line-height: 1.6rem;
+}
+
+// custom background images for missing HOR members
+#J000289 {
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/J000289.jpg');
+}
+#C001053 {
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/C001053.jpg');
+}
+#R000583 {
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/R000583.jpg');
+}
+#R000582 {
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/R000582.jpg');
+}
+#J000290 {
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/J000290.jpg');
+}
+#J000299 {
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/J000299.jpg') !important;
+}
+#T000478 {
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/T000478.jpg');
+}
+#L000587 {
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/L000587.jpg');
+}
+#R000607 {
+    background-image: url('http://media.mcclatchydc.com/static/graphics/20170314-AHCARepublicanOpinions/static/images/R000607.jpg');
 }
